--- a/views/user.haml
+++ b/views/user.haml
@@ -19,7 +19,7 @@
                             %td= account.name
                             %td.noborder
 
-        .text_content.non_top_post
+        .text_content.non_top_post#trophylinks
             %h3
                 Trophies
             - if @player.individualtrophies.count > 0
