--- a/views/register.haml
+++ b/views/register.haml
@@ -24,3 +24,6 @@
           %input#submit{:name => "submit", :type => "submit", :value => "Register!"}/
     %span#end_of_content_spacer.clear
 / end of container
+%script{:src => "https://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"}
+%script{:src => "/scripts.js"}
+
