--- a/views/register.haml
+++ b/views/register.haml
@@ -21,7 +21,7 @@
             .form_msg
               Field required
             %span.clear
-          %input#submit{:name => "submit", :type => "submit", :value => "Register!"}/
+          %input#submit.bigred{:name => "submit", :type => "submit", :value => "Register!"}/
     %span#end_of_content_spacer.clear
 / end of container
 %script{:src => "https://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"}
