--- a/views/servers.haml
+++ b/views/servers.haml
@@ -4,9 +4,9 @@
       %p
         These are our servers.
     .text_content
-      %table#servers
+      %table.prettytable
         %tr
-          %th.server_name
+          %th
             Server name
           %th
             Abbreviation
@@ -19,7 +19,7 @@
           %th
             Issues/notes
         %tr
-          %td.server_name
+          %td
             nethack.alt.org
           %td
             %a{:href => "/server/nao"} NAO
@@ -32,7 +32,7 @@
           %td
             &nbsp;
         %tr
-          %td.server_name
+          %td
             acehack.rawrnix.com
           %td
             %a{:href => "/server/arc"} ARC
@@ -45,7 +45,7 @@
           %td
             &nbsp;
         %tr
-          %td.server_name
+          %td
             acehack.sovrappensiero.info
           %td
             %a{:href => "/server/asi"} ASI
@@ -58,7 +58,7 @@
           %td
             &nbsp;
         %tr
-          %td.server_name
+          %td
             un.nethack.nu
           %td
             %a{:href => "/server/eun"} EUN
@@ -71,7 +71,7 @@
           %td
             &nbsp;
         %tr
-          %td.server_name
+          %td
             nethack.fi
           %td
             %a{:href => "/server/nfi"} NFI
@@ -84,7 +84,7 @@
           %td
             &nbsp;
         %tr
-          %td.server_name
+          %td
             sporkhack.com
           %td
             %a{:href => "/server/shc"} SHC
@@ -97,7 +97,7 @@
           %td
             &nbsp;
         %tr
-          %td.server_name
+          %td
             us.un.nethack.nu
           %td
             %a{:href => "/server/uun"} UUN
@@ -110,7 +110,7 @@
           %td
             &nbsp;
         %tr
-          %td.server_name
+          %td
             acehack.sovrappensiero.info
           %td
             %a{:href => "/server/n13"} N13
@@ -123,7 +123,7 @@
           %td
             &nbsp;
         %tr
-          %td.server_name
+          %td
             nethack.eu
           %td
             %a{:href => "/server/neu"} NEU
