--- a/views/clans.haml
+++ b/views/clans.haml
@@ -3,9 +3,9 @@
     .text_content
       %h3
         Clans
-      %table#clans
+      %table.prettytable
         %tr
-          %th.server_name
+          %th
             Clan name
           %th
             Clan admin
@@ -13,7 +13,7 @@
             Members
         - @clans.each do |clan|
           %tr
-            %td.server_name
+            %td
               %a{:href => "/clan/" + clan.name}
                 #{h clan.name}
             %td
