--- a/views/footer.haml
+++ b/views/footer.haml
@@ -1,9 +1,9 @@
 #footer
   %footer
     This site (c) 2011
-    %a{:href => "about"} Junethack developers.
+    %a{:href => "/authors.txt"} Junethack developers.
     [
-    %a{:href => "about"} About 
+    %a{:href => "/about"} About 
     \-
-    %a{:href => "rules"} Rules
+    %a{:href => "/rules"} Rules
     ]
