add useful info links in the footer

--- a/views/footer.haml
+++ b/views/footer.haml
@@ -14,3 +14,10 @@
     \-
     %a{:href => "/servers"} Servers
     ]
+    [
+    %a{:href => "/users"} Users
+    \-
+    %a{:href => "/clans"} Clans
+    \-
+    %a{:href => "/servers"} Servers
+    ]
