add useful info links in the footer

--- a/views/footer.haml
+++ b/views/footer.haml
@@ -7,3 +7,10 @@
     \-
     %a{:href => "/rules"} Rules
     ]
+    [
+    %a{:href => "/users"} Users
+    \-
+    %a{:href => "/clans"} Clans
+    \-
+    %a{:href => "/servers"} Servers
+    ]
