show the highest score competition thingy on scoreboard

--- a/views/scoreboard.haml
+++ b/views/scoreboard.haml
@@ -4,6 +4,7 @@
       %h1
         Scoreboard
       %h2
+      =haml :_clan_trophies
       =haml :_trophy_scores
       =haml :generic_scores
     %span#end_of_content_spacer.clear
