--- a/views/scoreboard.haml
+++ b/views/scoreboard.haml
@@ -4,6 +4,7 @@
       %h1
         Scoreboard
       %h2
+      =haml :_clan_trophies
       =haml :_trophy_scores
       .text_content.non_top_post
         =haml :games_played
