reveal scoreboard, add trophies link to footer

--- a/views/footer.haml
+++ b/views/footer.haml
@@ -20,4 +20,6 @@
     %a{:href => "/clans"} Clans
     \-
     %a{:href => "/servers"} Servers
+    \-
+    %a{:href => "/trophies"} Trophies
     ]
