Use standard template for last games played on scoreboard

--- a/views/scoreboard.haml
+++ b/views/scoreboard.haml
@@ -5,6 +5,8 @@
         Scoreboard
       %h2
       =haml :_trophy_scores
+      .text_content.non_top_post
+        =haml :games_played
       =haml :generic_scores
     %span#end_of_content_spacer.clear
 / end of container
