--- a/views/_trophy_scores.haml
+++ b/views/_trophy_scores.haml
@@ -1,20 +1,18 @@
+/ repository.adapter.select "select (select login from users where user_id = id) as user, user_id, variant, trophy, value, value_display from scoreentries order by variant,trophy,user;"
+
 .text_content
   %h2
-    Competition
+    Trophies
   - $variants_mapping.each do |variant, variant_name|
     %h3= variant_name
-    .scorelisting
-      %table
-        %tr
-          %th Competition
-          %th Player
-          %th
-        - count = 0
-        - for i in 0..$trophies.size do
-          - helper_get_score($trophies[i], variant).each do |e|
-            - style = (count % 2) == 0 ? "cell1" : "cell2"
-            - count += 1
-            %tr{:id => style}
-              %td= h $trophies_name[i]
-              %td= h e.user
-              %td.table_number= e.value_display ? e.value_display : e.value
+    - scoreentries = repository.adapter.select "select (select login from users where user_id = id) as user, user_id, trophy, icon from scoreentries where variant = ? order by trophy,upper(user);", variant
+    - last_trophy = nil
+    - scoreentries.each do |s|
+      - if $trophy_names[s.trophy]
+        - if s.trophy != last_trophy
+          - if last_trophy
+            %br
+          %a{:title => $trophy_names[s.trophy], :href => "/trophies#" + s.icon[0 .. (s.icon.length - 5)]}
+            %img{:style => "width:5%;height:5%;", :src => "/icons/" + s.icon}
+          - last_trophy = s.trophy
+        %a{:href => "/user/" + CGI::escape(s.user)}=h s.user
