--- a/views/home.haml
+++ b/views/home.haml
@@ -10,7 +10,7 @@
                     %tr
                         %th Server
                         %th Account
-                        %th
+                        %th Variant
                     - count = 0
                     - for account in @user.accounts
                         - style = (count % 2) == 0 ? "cell1" : "cell2"
@@ -18,6 +18,7 @@
                         %tr.account{:id => style}
                             %td= account.server.display_name
                             %td= account.name
+                            %td= account.server.variant
                             %td.noborder
 
                     - if server_accounts.size > 0
