--- a/views/_trophy_scores.haml
+++ b/views/_trophy_scores.haml
@@ -1,8 +1,17 @@
-/ repository.adapter.select "select (select login from users where user_id = id) as user, user_id, variant, trophy, value, value_display from scoreentries order by variant,trophy,user;"
-
 .text_content
   %h2
     Trophies
+  %h3 Individual
+  - ["king_of_the_world", "globetrotter", "sightseeing_tour"].each do |individualtrophy|
+    %div
+      - users = repository.adapter.select "select (select login from users where user_id = id) as user, user_id, icon from individualtrophies where trophy = ? order by upper(user);", individualtrophy
+      - if users.size > 0
+        %a{:title => $trophy_names[individualtrophy], :href => "/trophies#" + users[0].icon[0 .. (users[0].icon.length - 5)]}
+          %img{:style => "width:5%;height:5%;", :src => "/icons/" + users[0].icon}
+        - users.each do |u|
+          %span
+            %a{:href => "/user/" + CGI::escape(u.user)}=h u.user
+
   - $variants_mapping.each do |variant, variant_name|
     %h3= variant_name
     - scoreentries = repository.adapter.select "select (select login from users where user_id = id) as user, user_id, trophy, icon from scoreentries where variant = ? order by trophy,upper(user);", variant
