--- a/views/scoreboard.haml
+++ b/views/scoreboard.haml
@@ -5,7 +5,8 @@
         Scoreboard
       %h2
       =haml :_clan_trophies
-      =haml :_trophy_scores
+      .text_content.non_top_post
+        =haml :_trophy_scores
       .text_content.non_top_post
         =haml :games_played
       =haml :generic_scores
