--- a/views/user.haml
+++ b/views/user.haml
@@ -23,56 +23,64 @@
                             %td= account.name
                             %td.noborder
 
-        .text_content.non_top_post#trophylinks
-            %h3
-                Trophies
-            - if @player.individualtrophies.count > 0
-                %li
-                    Individual
-                %p
-                    - for individualtrophy in @player.individualtrophies
-                        %a{:title => $trophy_names[individualtrophy.trophy], :href => "/trophies#" + individualtrophy.icon[0 .. (individualtrophy.icon.length - 5)]}
-                            %img{:style => "width:5%;height:5%;", :src => "/icons/" + individualtrophy.icon}
-            - unless @player.scoreentries.select{|entry| entry.variant == "3.6.0"}.empty?
-                %li
-                    AceHack
-                %p
-                    - for scoreentry in @player.scoreentries
-                        - if scoreentry.variant == "3.6.0"
-                            %a{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
-                                %img{:style => "width:5%;height:5%;", :src => "/icons/" + scoreentry.icon}
-            - unless @player.scoreentries.select{|entry| entry.variant == "3.4.3"}.empty?
-                %li
-                    NetHack 3.4.3
-                %p
-                    - for scoreentry in @player.scoreentries
-                        - if scoreentry.variant == "3.4.3"
-                            %a{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
-                                %img{:style => "width:5%;height:5%;", :src => "/icons/" + scoreentry.icon}
-            - unless @player.scoreentries.select{|entry| entry.variant == "UNH-3.5.4"}.empty?
-                %li
-                    UnNetHack
-                %p
-                    - for scoreentry in @player.scoreentries
-                        - if scoreentry.variant == "UNH-3.5.4"
-                            %a{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
-                                %img{:style => "width:5%;height:5%;", :src => "/icons/" + scoreentry.icon}
-            - unless @player.scoreentries.select{|entry| entry.variant == "0.6.3"}.empty?
-                %li
-                    SporkHack
-                %p
-                    - for scoreentry in @player.scoreentries
-                        - if scoreentry.variant == "0.6.3"
-                            %a{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
-                                %img{:style => "width:5%;height:5%;", :src => "/icons/" + scoreentry.icon}
-            - unless @player.scoreentries.select{|entry| entry.variant == "NH-1.3d"}.empty?
-                %li
-                    NetHack 1.3d
-                %p
-                    - for scoreentry in @player.scoreentries
-                        - if scoreentry.variant == "NH-1.3d"
-                            %a{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
-                                %img{:style => "width:5%;height:5%;", :src => "/icons/" + scoreentry.icon}
+        .text_content.non_top_post
+            .trophycabinet.text_cabinet
+                %h3
+                    Trophies
+                %ul
+                - if @player.individualtrophies.count > 0
+                    %li
+                        .trophyleft
+                            Individual
+                        .trophyright
+                            - for individualtrophy in @player.individualtrophies
+                                %a.imagelink{:title => $trophy_names[individualtrophy.trophy], :href => "/trophies#" + individualtrophy.icon[0 .. (individualtrophy.icon.length - 5)]}
+                                    %img{:src => "/icons/" + individualtrophy.icon}
+                - unless @player.scoreentries.select{|entry| entry.variant == "3.6.0"}.empty?
+                    %li
+                        .trophyleft
+                            AceHack
+                        .trophyright
+                            - for scoreentry in @player.scoreentries
+                                - if scoreentry.variant == "3.6.0"
+                                    %a.imagelink{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
+                                        %img{:src => "/icons/" + scoreentry.icon}
+                - unless @player.scoreentries.select{|entry| entry.variant == "3.4.3"}.empty?
+                    %li
+                        .trophyleft
+                            NetHack 3.4.3
+                        .trophyright
+                            - for scoreentry in @player.scoreentries
+                                - if scoreentry.variant == "3.4.3"
+                                    %a.imagelink{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
+                                        %img{:src => "/icons/" + scoreentry.icon}
+                - unless @player.scoreentries.select{|entry| entry.variant == "UNH-3.5.4"}.empty?
+                    %li
+                        .trophyleft
+                            UnNetHack
+                        .trophyright
+                            - for scoreentry in @player.scoreentries
+                                - if scoreentry.variant == "UNH-3.5.4"
+                                    %a.imagelink{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
+                                        %img{:src => "/icons/" + scoreentry.icon}
+                - unless @player.scoreentries.select{|entry| entry.variant == "0.6.3"}.empty?
+                    %li
+                        .trophyleft
+                            SporkHack
+                        .trophyright
+                            - for scoreentry in @player.scoreentries
+                                - if scoreentry.variant == "0.6.3"
+                                    %a.imagelink{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
+                                        %img{:src => "/icons/" + scoreentry.icon}
+                - unless @player.scoreentries.select{|entry| entry.variant == "NH-1.3d"}.empty?
+                    %li
+                        .trophyleft
+                            NetHack 1.3d
+                        .trophyright
+                            - for scoreentry in @player.scoreentries
+                                - if scoreentry.variant == "NH-1.3d"
+                                    %a.imagelink{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
+                                        %img{:src => "/icons/" + scoreentry.icon}
         =haml :_player_games
         .text_content.non_top_post
             =haml :games_played
