--- a/views/_trophy_scores.haml
+++ b/views/_trophy_scores.haml
@@ -3,8 +3,8 @@
         Trophies
     .trophycabinet
         %h3 Individual
-        - ["king_of_the_world", "globetrotter", "sightseeing_tour"].each do |individualtrophy|
-            %ul
+        %ul
+            - ["king_of_the_world", "globetrotter", "sightseeing_tour"].each do |individualtrophy|
                 %li
                     - users = repository.adapter.select "select (select login from users where user_id = id) as user, user_id, icon from individualtrophies where trophy = ? order by upper(user);", individualtrophy
                     - if users.size > 0
@@ -14,17 +14,22 @@
                             %div.trophyright
                                 %a{:href => "/user/" + CGI::escape(u.user)}=h u.user
 
-        - $variants_mapping.each do |variant, variant_name|
+    - $variants_mapping.each do |variant, variant_name|
+        .trophycabinet
             %h3= variant_name
-            - scoreentries = repository.adapter.select "select (select login from users where user_id = id) as user, user_id, trophy, icon from scoreentries where variant = ? order by trophy,upper(user);", variant
-            - last_trophy = nil
-            - scoreentries.each do |s|
-                - if $trophy_names[s.trophy]
-                    - if s.trophy != last_trophy
-                        - if last_trophy
-                            %br
-                        %a{:title => $trophy_names[s.trophy], :href => "/trophies#" + s.icon[0 .. (s.icon.length - 5)]}
-                            %img{:style => "width:5%;height:5%;", :src => "/icons/" + s.icon}
-                        - last_trophy = s.trophy
-                    %a{:href => "/user/" + CGI::escape(s.user)}=h s.user
+            %ul
+                - scoreentries = repository.adapter.select "select (select login from users where user_id = id) as user, user_id, trophy, icon from scoreentries where variant = ? order by trophy,upper(user);", variant
+                - last_trophy = nil
+                - scoreentries.each do |s|
+                    %li
+                        - if $trophy_names[s.trophy]
+                            - if s.trophy != last_trophy
+                                - if last_trophy
+                                    %br
+                                %a.imagelink{:title => $trophy_names[s.trophy], :href => "/trophies#" + s.icon[0 .. (s.icon.length - 5)]}
+                                    %img.trophyleft{:style => "width:5%;height:5%;", :src => "/icons/" + s.icon}
+                                .trophyright
+                                    %span
+                                        %a{:href => "/user/" + CGI::escape(s.user)}=h s.user
+                                - last_trophy = s.trophy
 
