--- a/views/_trophy_scores.haml
+++ b/views/_trophy_scores.haml
@@ -10,8 +10,8 @@
                     - if users.size > 0
                         %a.imagelink{:title => $trophy_names[individualtrophy], :href => "/trophies#" + users[0].icon[0 .. (users[0].icon.length - 5)]}
                             %img.trophyleft{:style => "width:5%;height:5%;", :src => "/icons/" + users[0].icon}
-                        - users.each do |u|
-                            %div.trophyright
+                        .trophyright
+                            - users.each do |u|
                                 %span
                                     %a{:href => "/user/" + CGI::escape(u.user)}=h u.user
 
