--- a/views/_trophy_scores.haml
+++ b/views/_trophy_scores.haml
@@ -1,4 +1,4 @@
-.text_content
+.text_content.non_top_post
     %h2
         Trophies
     .trophycabinet
@@ -9,7 +9,7 @@
                     - users = repository.adapter.select "select (select login from users where user_id = id) as user, user_id, icon from individualtrophies where trophy = ? order by upper(user);", individualtrophy
                     - if users.size > 0
                         %a.imagelink{:title => $trophy_names[individualtrophy], :href => "/trophies#" + users[0].icon[0 .. (users[0].icon.length - 5)]}
-                            %img.trophyleft{:style => "width:5%;height:5%;", :src => "/icons/" + users[0].icon}
+                            %img.trophyleft{:src => "/icons/" + users[0].icon}
                         .trophyright
                             - users.each do |u|
                                 %span
@@ -28,7 +28,7 @@
                                 - if last_trophy
                                     %br
                                 %a.imagelink{:title => $trophy_names[s.trophy], :href => "/trophies#" + s.icon[0 .. (s.icon.length - 5)]}
-                                    %img.trophyleft{:style => "width:5%;height:5%;", :src => "/icons/" + s.icon}
+                                    %img.trophyleft{:src => "/icons/" + s.icon}
                                 .trophyright
                                     %span
                                         %a{:href => "/user/" + CGI::escape(s.user)}=h s.user
