Specify that all times are in UTC

--- a/views/clan.haml
+++ b/views/clan.haml
@@ -41,7 +41,7 @@
             %th
               Role
             %th
-              Last game played (EST)
+              Last game played (UTC)
             %th
               Clan accounts 
             %th
