--- a/views/games_played.haml
+++ b/views/games_played.haml
@@ -8,7 +8,7 @@
         %th Server
         %th Points
         %th Killer
-        %th Time
+        %th Time (UTC)
       - count = 0
       - @games_played.each do |game|
         - style = (count % 2) == 0 ? "cell1" : "cell2"
