--- a/views/server.haml
+++ b/views/server.haml
@@ -15,7 +15,7 @@
             %th Name
             %th Points
             %th Killer
-            %th Time
+            %th Time (UTC)
           - count = 0
           - @games.each do |game|
             - style = (count % 2) == 0 ? "cell1" : "cell2"
