--- a/views/_trophy_scores.haml
+++ b/views/_trophy_scores.haml
@@ -7,7 +7,7 @@
             %li
                 - users = repository.adapter.select "select (select login from users where user_id = id) as user, user_id, icon from individualtrophies where trophy = ? order by upper(user);", individualtrophy
                 - if users.size > 0
-                    %a.imagelink{:title => $trophy_names[individualtrophy], :href => "/trophies#" + users[0].icon[0 .. (users[0].icon.length - 5)]}
+                    %a.imagelink{:title => $trophy_names[individualtrophy], :alt => $trophy_names[individualtrophy], :href => "/trophies#" + users[0].icon[0 .. (users[0].icon.length - 5)]}
                         %img.trophyleft{:src => "/icons/" + users[0].icon}
                     .trophyright
                         - users.each do |u|
@@ -22,7 +22,7 @@
             - scoreentries.each do |s|
                 - if $trophy_names[s.trophy]
                     %li
-                        %a.imagelink{:title => $trophy_names[s.trophy], :href => "/trophies#" + s.icon[0 .. (s.icon.length - 5)]}
+                        %a.imagelink{:title => $trophy_names[s.trophy], :alt => $trophy_names[s.trophy], :href => "/trophies#" + s.icon[0 .. (s.icon.length - 5)]}
                             %img.trophyleft{:src => "/icons/" + s.icon}
                         - users = repository.adapter.select "select (select login from users where user_id = id) as user, user_id from scoreentries where variant = ? and trophy = ? order by upper(user);", variant, s.trophy
                         .trophyright
