--- a/views/home.haml
+++ b/views/home.haml
@@ -40,8 +40,8 @@
                     Individual
                 %p
                     - for individualtrophy in @user.individualtrophies
-                        %a{:title => $trophy_names[individualtrophy.trophy], :alt => $trophy_names[individualtrophy.trophy], :href => "/trophies#" + individualtrophy.icon[0 .. (individualtrophy.icon.length - 5)]}
-                            %img{:style => "width:5%;height:5%;", :src => "/icons/" + individualtrophy.icon}
+                        %a{:title => $trophy_names[individualtrophy.trophy], :href => "/trophies#" + individualtrophy.icon[0 .. (individualtrophy.icon.length - 5)]}
+                            %img{:style => "width:5%;height:5%;", :src => "/icons/" + individualtrophy.icon, :alt => $trophy_names[individualtrophy.trophy]}
             - unless @user.scoreentries.select{|entry| entry.variant == "3.6.0"}.empty?
                 %li
                     AceHack
@@ -56,32 +56,32 @@
                 %p
                     - for scoreentry in @user.scoreentries
                         - if scoreentry.variant == "3.4.3"
-                            %a{:title => $trophy_names[scoreentry.trophy], :alt => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
-                                %img{:style => "width:5%;height:5%;", :src => "/icons/" + scoreentry.icon}
+                            %a{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
+                                %img{:style => "width:5%;height:5%;", :src => "/icons/" + scoreentry.icon, :alt => $trophy_names[scoreentry.trophy]}
             - unless @user.scoreentries.select{|entry| entry.variant == "UNH-3.5.4"}.empty?
                 %li
                     UnNetHack
                 %p
                     - for scoreentry in @user.scoreentries
                         - if scoreentry.variant == "UNH-3.5.4"
-                            %a{:title => $trophy_names[scoreentry.trophy], :alt => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
-                                %img{:style => "width:5%;height:5%;", :src => "/icons/" + scoreentry.icon}
+                            %a{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
+                                %img{:style => "width:5%;height:5%;", :src => "/icons/" + scoreentry.icon, :alt => $trophy_names[scoreentry.trophy]}
             - unless @user.scoreentries.select{|entry| entry.variant == "0.6.3"}.empty?
                 %li
                     SporkHack
                 %p
                     - for scoreentry in @user.scoreentries
                         - if scoreentry.variant == "0.6.3"
-                            %a{:title => $trophy_names[scoreentry.trophy], :alt => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
-                                %img{:style => "width:5%;height:5%;", :src => "/icons/" + scoreentry.icon}
+                            %a{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
+                                %img{:style => "width:5%;height:5%;", :src => "/icons/" + scoreentry.icon, :alt => $trophy_names[scoreentry.trophy]}
             - unless @user.scoreentries.select{|entry| entry.variant == "NH-1.3d"}.empty?
                 %li
                     NetHack 1.3d
                 %p
                     - for scoreentry in @user.scoreentries
                         - if scoreentry.variant == "NH-1.3d"
-                            %a{:title => $trophy_names[scoreentry.trophy], :alt => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
-                                %img{:style => "width:5%;height:5%;", :src => "/icons/" + scoreentry.icon}
+                            %a{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
+                                %img{:style => "width:5%;height:5%;", :src => "/icons/" + scoreentry.icon, :alt => $trophy_names[scoreentry.trophy]}
         =haml :_user_games
         .text_content.non_top_post
             =haml :games_played
