--- a/views/user.haml
+++ b/views/user.haml
@@ -34,8 +34,8 @@
                                 Individual
                             .trophyright
                                 - for individualtrophy in @player.individualtrophies
-                                    %a.imagelink{:title => $trophy_names[individualtrophy.trophy], :alt => $trophy_names[individualtrophy.trophy], :href => "/trophies#" + individualtrophy.icon[0 .. (individualtrophy.icon.length - 5)]}
-                                        %img{:src => "/icons/" + individualtrophy.icon}
+                                    %a.imagelink{:title => $trophy_names[individualtrophy.trophy], :href => "/trophies#" + individualtrophy.icon[0 .. (individualtrophy.icon.length - 5)]}
+                                        %img{:src => "/icons/" + individualtrophy.icon, :alt => $trophy_names[individualtrophy.trophy]}
                     - unless @player.scoreentries.select{|entry| entry.variant == "3.6.0"}.empty?
                         %li
                             .trophyleft
@@ -43,8 +43,8 @@
                             .trophyright
                                 - for scoreentry in @player.scoreentries
                                     - if scoreentry.variant == "3.6.0"
-                                        %a.imagelink{:title => $trophy_names[scoreentry.trophy], :alt => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
-                                            %img{:src => "/icons/" + scoreentry.icon}
+                                        %a.imagelink{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
+                                            %img{:src => "/icons/" + scoreentry.icon, :alt => $trophy_names[scoreentry.trophy]}
                     - unless @player.scoreentries.select{|entry| entry.variant == "3.4.3"}.empty?
                         %li
                             .trophyleft
