Started styling account-clan section, realigned accept/decline table, updated trophycabinet documentation.

--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -331,18 +331,13 @@ form#login_form > fieldset > input[type=submit],
 
 
 #accountlist,
-.scorelisting table
-{
+.scorelisting table {
     font-size: 85%;
-    border-width: 2px;
-    border-style: solid;
-    border-color: gray;
     border-collapse: collapse;
     /* Hard limit on width */
     width: 600px;
     text-align: left;
     vertical-align: middle;
-    border: 1px solid #DDD;
 }
 #accountlist th,
 .scorelisting th
@@ -408,6 +403,14 @@ form#login_form > fieldset > input[type=submit],
     font-size: 100%;
 }
 
+/**************************
+**                       **
+**      /home styles     **
+**                       **
+**************************/
+
+.account-clan {
+}
 
 
 /**************************
@@ -620,11 +623,13 @@ table#servers th {
 structure for a trophy cabinet:
 
 .trophy_cabinet
-    h3
-    ul
-        li
-            .trophyplaque
-            img, .imagelink
+  h3
+  ul
+    li
+      .trophyleft
+      .trophyright
+- all a's to have .imagelink
+- all img's to have no inline styles
 */
 .trophycabinet {
     padding-top: 1px;/* for margin collapse */
