--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -293,10 +293,10 @@ form#login_form > fieldset > input[type=submit],
     /* space between the main content and the element before - eg signup button */
     margin-top: 3.0em;
     padding-top: 1px;
+    padding-bottom: 30px;
 }
 .text_content {
-    margin: 0 30px;
-    margin-top: 35px;
+    margin: 35px 30px 0 30px;
     line-height: 1.5em;
 }
 .text_content p {
@@ -410,6 +410,7 @@ form#login_form > fieldset > input[type=submit],
 **************************/
 
 .account-clan {
+  margin-top: 10px;
 }
 
 
@@ -725,4 +726,7 @@ li.multiline > span {
 }
 .center {
     text-align: center;
+}
+.flat {
+    height: 0;
 }
