Haml edits: Added .greytable to every table that wasn't a .prettytable, and removed inline styles

--- a/views/_user_games.haml
+++ b/views/_user_games.haml
@@ -4,7 +4,7 @@
   - @variant = variant
   %h4= variant_name
   .scorelisting
-    %table
+    %table.greytable
       %tr
         %th Competition
         %th
