--- a/views/home.haml
+++ b/views/home.haml
@@ -6,7 +6,7 @@
                 #greeting
                     = "Hi #{h @user.login}, to have your games on one of the <a href='/servers'>supported public servers</a> ranked in the tournament, add the following line<br/><tt># #{h @tournament_identifier}</tt><br/> to your options file on the public server and enter your public server account name (case-sensitive) into the form below."
             %form{ :action => "/add_server_account", :method => "post"}
-                %table#accountlist
+                %table#accountlist.greytable
                     %tr
                         %th Server
                         %th Account
