--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -320,6 +320,7 @@ form#login_form > fieldset > input[type=submit],
     width: 114px;
     display: block;
     margin: 0 auto;
+    margin-top: 20px;
 }
 
 /**************************
@@ -334,6 +335,7 @@ form#login_form > fieldset > input[type=submit],
     width: 100%; /* there's an inline style here.. */
     text-align: left;
     vertical-align: middle;
+    margin: 10px 0;
 }
 .greytable th {
     text-align: left;
@@ -371,31 +373,75 @@ form#login_form > fieldset > input[type=submit],
     padding-right: 3px;
     padding-left: 3px;
 }
-.greytable 
-#accountlist,
-#accountlist tr,
-#accountlist td
+#accountlist.greytable,
+#accountlist.greytable tr,
+#accountlist.greytable td
 {
-    width: inherit;
+    /* not supported by ie
+    width: inherit; */
 }
-#accountlist tr.norow,
-#accountlist tr.norow td,
-#accountlist td.noborder
+#accountlist.greytable tr.norow,
+#accountlist.greytable tr.norow td,
+#accountlist.greytable td.noborder
 {
     border-width: 0px;
     background-color: inherit;
     vertical-align: middle;
 }
-#accountlist input[type="text"]
+#accountlist.greytable input[type="text"]
 {
     width: 6em;
     margin: 3px 3px 3px 3px;
     padding: 0;
 }
-#accountlist select
+#accountlist.greytable select
 {
     font-size: 100%;
 }
+
+/**************************
+**                       **
+**      small forms      **
+**                       **
+**************************/
+
+.smallform {
+  margin-bottom: 10px;
+}
+.smallform label,
+.smallform input,
+.smallform select {
+    margin-right: 10px;
+    float:left;
+}
+.smallform input,
+.smallform select,
+.smallform label,
+.smallform input[type=submit] {
+  margin-top: 10px;
+  height: 30px;
+}
+.smallform select {
+  padding: 0;
+}
+
+.smallform input {
+  padding: 5px 5px 5px 5px;
+  height: 20px;
+}
+
+.smallform input[type=submit] {
+  padding: 5px 10px;
+  margin-left: 0;
+}
+/* cascading from label...maybe? or maybe i should make label into #login label and #register label */
+.smallform label {
+  margin-left: 0;
+  width: auto;
+  line-height: 30px;
+  clear: none;
+}
+
 
 /**************************
 **                       **
@@ -485,14 +531,6 @@ form#login_form > fieldset > input[type=submit].active:hover {
     background-color: #c22;
 }
 
-input[type="submit"].small_button {
-    height: auto;
-    width: auto;
-    margin: 2px;
-    padding-top: 0px;
-    padding-bottom: 0px;
-}
-
 /**************************
 **                       **
 **     footer styles     **
@@ -557,45 +595,38 @@ table#servers th {
 **                       **
 **************************/
 
+#clan_header {
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 20px;
+}
+
 #clan_header > div,
 #clan_header > h1 {
     margin-bottom: 0;
-    height: 60px;
-    line-height: 60px;
+    height: 50px;
+    line-height: 50px;
 }
 
 #clan_header > h1 {
+    line-height: 50px;
     width: auto;
     text-align: center;
     float: left;
 }
-#clan_header > h1 > span {
-    width: 100%;
-    display: block;
-}
-/* small icons */
+/* the group of right hand things */
 #clan_header > div {
-    float: right;
-    width: 16%;
-    text-align: center;
     border-left: 1px solid #ccc;
+    float: right;
+    padding: 0 20px;
+    text-align: center;
 }
+/* links only - no spans here please */
 #clan_header > div a {
     display: block;
 }
 #clan_header > div a:hover {
     background-color: #dadada;
     text-decoration: none;
-}
-#clan_members,
-#clan_trophies {
-    clear: both;
-    border-top: 1px solid #ccc;
-}
-/* internal wrapper */
-#clan_members > div,
-#clan_trophies > div {
-    margin: 15px;
 }
 #clan_trophies .trophyicon {
     margin-left: 5px;
