More of the incomplete haml

--- a/views/_user_games.haml
+++ b/views/_user_games.haml
@@ -1,8 +1,8 @@
-%h3
-  Competition
+%h2
+  Your tournament stats
 - @userscore.variants.each do |variant, variant_name|
   - @variant = variant
-  %h4= variant_name
+  %h3= variant_name
   .scorelisting
     %table.greytable
       %tr
