--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,6 +4,7 @@
     %meta{:content => "application/xhtml+xml;charset=utf-8", "http-equiv" => "content-type"}/
     %link{:href => "/style-xiella.css", :rel => "stylesheet", :type => "text/css"}/
     %title= "Junethack - #{User.count} players registered - #{Game.count} games played!"
+    %script{:src => "/analytics.js"}
   %body
     #container
       #topnav.navigation
