add flattr to about

--- a/views/about.haml
+++ b/views/about.haml
@@ -32,6 +32,11 @@
         people listed in the
         %a{:href => "authors.txt"} authors file.
       %p
+        If you want to support the developers of this site you can 
+        help cover the hosting costs using Flattr.
+        %a{:href => "http://flattr.com/thing/345872/Junethack-Nethack-Tournament", :target => "_blank"}
+          %img{:src => "http://api.flattr.com/button/flattr-badge-large.png", :alt => "Flattr this", :title => "Flattr this", :border => "0"}
+      %p
         The software this server runs on is publicly available at
         %a{:href => "https://github.com/junethack/Junethack"} GitHub.
         The licenses and other information is contained within the git repository.
