--- a/views/footer.haml
+++ b/views/footer.haml
@@ -18,3 +18,6 @@
     \-
     %a{:href => "/trophies"} Trophies
     ]
+    %a{:href => "http://flattr.com/thing/345872/Junethack-Nethack-Tournament", :target => "_blank"}
+      %img{:src => "http://api.flattr.com/button/flattr-badge-large.png", :alt => "Flattr this", :title => "Flattr this", :border => "0"}
+
