Simple NEWS section on /

--- a/views/splash.haml
+++ b/views/splash.haml
@@ -19,6 +19,8 @@
       %p
         And also play in the NetHack Summer tournament.
     .text_content.non_top_post
+      =haml :news
+    .text_content.non_top_post
       %p
         You can view the tournament rules at the 
         %a{:href => "/rules"} Rules page.
